--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tooltip": "^1.2.4",
     "@sanity/assist": "^4.0.0",
     "@sanity/icons": "^3.7.0",
     "@sanity/image-url": "^1.1.0",
@@ -27,6 +28,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-intl": "^7.1.10",
+    "react-is": "^19.1.0",
     "sanity": "^3.84.0",
     "sanity-plugin-internationalized-array": "^3.1.2",
     "styled-components": "^6.1.17",
