--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-i18n-router": "^5.5.1",
     "next-sanity": "^9.10.2",
     "next-themes": "^0.4.6",
+    "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-intl": "^7.1.10",
@@ -37,7 +38,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.4",
     "@types/babel__generator": "^7.27.0",
     "@types/babel__traverse": "^7.20.7",
     "@types/minimist": "^1.2.5",
@@ -48,7 +49,7 @@
     "@types/unist": "^3.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.4",
     "typescript": "^5"
   }
 }
